--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.3.0",
     "form-data": "3.0.0",
+    "glob": "^8.1.0",
     "helmet": "^4.6.0",
     "html-parse-stringify": "3.0.1",
     "immer": "^9.0.6",
