feat: adding a new way to store session in minio

--- a/.env.test
+++ b/.env.test
@@ -21,4 +21,10 @@ GENERAL_SERVICE_ENDPOINT='https://general-service'
 REDIS_CLUSTER_HOST='localhost'
 REDIS_CLUSTER_PORT=6379
 
-SESSIONS_SOURCE='local'
+BUCKET_NAME='pipes_test_bucket'
+SESSIONS_SOURCE='minio'
+MINIO_OPTIONS_END_POTION='play.min.io'
+MINIO_OPTIONS_PORT=9000
+MINIO_OPTIONS_USE_SSL=true
+MINIO_OPTIONS_ACCESS_KEY='Q3AM3UQ867SPQQA43P2F'
+MINIO_OPTIONS_SECRET_KEY='zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG'
