--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@keyvhq/core": "^1.6.26",
     "@keyvhq/redis": "^1.6.26",
     "@opentelemetry/api-metrics": "0.26.0",
+    "@types/minio": "^7.0.15",
     "@types/workerpool": "^5.0.1",
     "@voiceflow/alexa-types": "2.12.31",
     "@voiceflow/api-sdk": "3.23.1",
@@ -52,8 +53,11 @@
     "ip-range-check": "^0.2.0",
     "isolated-vm": "^4.4.2",
     "json-stringify-safe": "^5.0.1",
+    "keyv": "^4.5.2",
     "lodash": "^4.17.21",
+    "log4js": "^6.7.1",
     "mathjs": "^10.6.1",
+    "minio": "^7.0.32",
     "moize": "^6.1.0",
     "mongodb": "^3.6.5",
     "node-fetch": "^2.6.7",
