--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.179.0",
     "@opentelemetry/api-metrics": "0.26.0",
+    "@types/minio": "^7.0.15",
     "@types/workerpool": "^5.0.1",
     "@voiceflow/alexa-types": "2.13.2",
     "@voiceflow/api-sdk": "3.23.6",
@@ -43,6 +44,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.3.0",
     "form-data": "3.0.0",
+    "glob": "^8.1.0",
     "helmet": "^4.6.0",
     "html-parse-stringify": "3.0.1",
     "immer": "^9.0.6",
@@ -50,8 +52,12 @@
     "ip-range-check": "^0.2.0",
     "isolated-vm": "^4.4.2",
     "json-stringify-safe": "^5.0.1",
+    "keyv": "^4.5.2",
     "lodash": "^4.17.21",
+    "log4js": "^6.7.1",
     "mathjs": "^10.6.1",
+    "minio": "^7.0.32",
+    "moize": "^6.1.0",
     "mongodb": "^3.6.5",
     "node-fetch": "^2.6.7",
     "regenerator-runtime": "^0.13.3",
